# PandaWeb

./: .gitignore  Cargo.toml  README.md  TODO.md  create_table.sql
client/: 404.html  Test.html  index.html
client/JavaScript/: home.js
client/Mobile/: 404.html  index.html
client/Mobile/src/: index.html
client/Mobile/style/: home.css
client/assets/: .user.ini
client/html/: about.html  login.html
client/mod/pmsiles/: .user.ini
client/mod/pmsiles/Script/: dom.js  style.js  websocket.js  window.js
client/mod/pmsiles/Script/DOM/: create.js
client/mod/pmsiles/Style/: main.css  shadow.css
client/src/: .user.ini  404.html  Test.html  index.html
client/src/JavaScript/: home.js  sender.js
client/src/html/: register.html
client/src/style/: index.css  window.css
client/style/: general.css  index.css  login.css  menu.css
front/CSS/: about.css  index.css  register.css
front/HTML/: about.html  index.html  register.html
front/JS/: about.js  index.js  register.js
server/: main.js  run.sh
src/: config.rs  db.rs  lib.rs  main.rs  routes.rs  state.rs
src/routes/: db_routes.rs  mod.rs  url_routes.rs
