[package]
name = "panda"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "fast-rng"] }
toml = "0.8"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
ntex = { version = "2", features = ["tokio"] }
sqlx = { version = "0.8", features = [
    "derive",
    "macros",
    "runtime-tokio",
    "postgres",
] }
[profile.release]
strip = true
[profile.dev]
strip = true
